@@ -1,3 +1,9 @@
+2004-06-07  Daniel Jacobowitz  <dan@debian.org>
+
+	From:  Albert Chin-A-Young  <china@thewrittenword.com>
+	* bfd/elf-bfd.h (struct eh_cie_fde): Convert unsigned char bitfields
+	to unsigned int.
+
 2004-03-13  Mark Kettenis  <kettenis@gnu.org>
 
 	* config.bfd: Add x86_64-*-openbsd*.
